<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myself_personal_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.maolv.tmall.view.circleImageView.CircleImageView
                android:id="@+id/iv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/myself_bottom"
                android:src="@drawable/iv_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/myself_bottom"
                android:text="@string/personal_acount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/myself_bottom"
                android:text="@string/acount_balance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/myself_bottom"
                android:text="@string/acount_commission" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acount_score" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/non_payment"
                android:textSize="@dimen/myself_text_size" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/myself_view_margin"
                android:layout_marginTop="@dimen/myself_view_margin"
                android:background="@color/myself_view_background"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/non_delivery"
                android:textSize="@dimen/myself_text_size" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/myself_view_margin"
                android:layout_marginTop="@dimen/myself_view_margin"
                android:background="@color/myself_view_background"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/non_received"
                android:textSize="@dimen/myself_text_size" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/myself_view_margin"
                android:layout_marginTop="@dimen/myself_view_margin"
                android:background="@color/myself_view_background"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/non_comments"
                android:textSize="@dimen/myself_text_size" />
        </LinearLayout>
    </LinearLayout>


    <!--菜单-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <com.maolv.tmall.view.gridView.MyselfMenuGridView
                android:id="@+id/myself_menu_gridview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:horizontalSpacing="0.0dip"
                android:listSelector="@null"
                android:numColumns="4"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="0.0dip" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>