<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/top_title_bar"></include>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"></EditText>


                <EditText
                    android:id="@+id/edtTxt_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />



            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_register_btn_height"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="@dimen/login_register_txt_size"/>


            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="没有毛驴商场的账号?"/>

            <Button
                android:layout_gravity="center"
                android:id="@+id/btn_toregister"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_register_btn_height"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="@dimen/login_register_txt_size"/>
        </LinearLayout>



    </ScrollView>
</LinearLayout>