<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--CycleImageView-->
    <com.maolv.tmall.view.imageCycleView.ImageCycleView
        android:id="@+id/icv_topView"
        android:layout_width="match_parent"
        android:layout_height="150dp"></com.maolv.tmall.view.imageCycleView.ImageCycleView>

    <!--nav -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:background="@color/nav_backgroound"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.maolv.tmall.view.circleImageView.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/nav_pic_txt_margin"
                android:src="@drawable/nav_goodclassify"
                myapp:backGroundColor="@color/nav_goodclassify" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_goodclassify"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.maolv.tmall.view.circleImageView.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/nav_pic_txt_margin"
                android:src="@drawable/nav_boutiquezone"
                myapp:backGroundColor="@color/nav_boutiquezone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_boutiquezone"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.maolv.tmall.view.circleImageView.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/nav_pic_txt_margin"
                android:src="@drawable/nav_orderlogistics"
                myapp:backGroundColor="@color/nav_orderlogistics" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_orderlogistics"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.maolv.tmall.view.circleImageView.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/nav_pic_txt_margin"
                android:src="@drawable/nav_rechargegift"
                myapp:backGroundColor="@color/nav_rechargegift" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nav_rechargegift"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <!--Hot seal 热卖产品-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/hot_seal_height"
        android:layout_marginLeft="10dp"
        android:background="@color/hot_seal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hot_seal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/hot_seal"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ListView
            android:id="@+id/hotgoogs_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>

</LinearLayout>