<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/fragment_title_bar"></include>

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_menu"
        android:layout_below="@+id/title">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu"
            android:orientation="horizontal">

            <!--主页-->
            <FrameLayout
                android:id="@+id/fragment_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_menu_margin"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imv_homepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/fragment_img_margin_text"
                    android:background="@drawable/homepage_selector" />

                <TextView
                    android:id="@+id/menu_txt_homepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/homepage"
                    android:textColor="@drawable/menu_txt_selector"
                    android:textSize="@dimen/fragment_menu_txt_size" />
            </FrameLayout>

            <!--分类-->
            <FrameLayout
                android:id="@+id/fragment_classify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_menu_margin"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imv_classify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/fragment_img_margin_text"
                    android:background="@drawable/classify_selector" />

                <TextView
                    android:id="@+id/menu_txt_classify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/classify"
                    android:textColor="@drawable/menu_txt_selector"
                    android:textSize="@dimen/fragment_menu_txt_size" />
            </FrameLayout>

            <!--购物车-->
            <FrameLayout
                android:id="@+id/fragment_shoppingcart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_menu_margin"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imv_shoppingcart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/fragment_img_margin_text"
                    android:background="@drawable/shoppingcart_selector" />

                <TextView
                    android:id="@+id/menu_txt_shoppingcart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/shoppingcart"
                    android:textColor="@drawable/menu_txt_selector"
                    android:textSize="@dimen/fragment_menu_txt_size" />
            </FrameLayout>

            <!--我-->
            <FrameLayout
                android:id="@+id/fragment_myself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_menu_margin"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imv_myself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/fragment_img_margin_text"
                    android:background="@drawable/myself_selector" />

                <TextView
                    android:id="@+id/menu_txt_myself"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/myself"
                    android:textColor="@drawable/menu_txt_selector"
                    android:textSize="@dimen/fragment_menu_txt_size" />
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>